APIs/googleapis.com/cloudresourcemanager/v3/javascript-client/README.md
# cloud_resource_manager_api

CloudResourceManagerApi - JavaScript client for cloud_resource_manager_api
Creates, reads, and updates metadata for Google Cloud Platform resource containers.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v3
- Package version: v3
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install cloud_resource_manager_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your cloud_resource_manager_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var CloudResourceManagerApi = require('cloud_resource_manager_api');

var defaultClient = CloudResourceManagerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new CloudResourceManagerApi.EffectiveTagsApi()
var opts = {
  'xgafv': "xgafv_example", // {String} V1 error format.
  'accessToken': "accessToken_example", // {String} OAuth access token.
  'alt': "alt_example", // {String} Data format for response.
  'callback': "callback_example", // {String} JSONP
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters.
  'uploadProtocol': "uploadProtocol_example", // {String} Upload protocol for media (e.g. \"raw\", \"multipart\").
  'uploadType': "uploadType_example", // {String} Legacy upload protocol for media (e.g. \"media\", \"multipart\").
  'pageSize': 56, // {Number} Optional. The maximum number of effective tags to return in the response. The server allows a maximum of 300 effective tags to return in a single page. If unspecified, the server will use 100 as the default.
  'pageToken': "pageToken_example", // {String} Optional. A pagination token returned from a previous call to `ListEffectiveTags` that indicates from where this listing should continue.
  'parent': "parent_example" // {String} Required. The full resource name of a resource for which you want to list the effective tags. E.g. \"//cloudresourcemanager.googleapis.com/projects/123\"
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.cloudresourcemanagerEffectiveTagsList(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://cloudresourcemanager.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*CloudResourceManagerApi.EffectiveTagsApi* | [**cloudresourcemanagerEffectiveTagsList**](docs/EffectiveTagsApi.md#cloudresourcemanagerEffectiveTagsList) | **GET** /v3/effectiveTags | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersCreate**](docs/FoldersApi.md#cloudresourcemanagerFoldersCreate) | **POST** /v3/folders | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersList**](docs/FoldersApi.md#cloudresourcemanagerFoldersList) | **GET** /v3/folders | 
*CloudResourceManagerApi.FoldersApi* | [**cloudresourcemanagerFoldersSearch**](docs/FoldersApi.md#cloudresourcemanagerFoldersSearch) | **GET** /v3/folders:search | 
*CloudResourceManagerApi.LiensApi* | [**cloudresourcemanagerLiensCreate**](docs/LiensApi.md#cloudresourcemanagerLiensCreate) | **POST** /v3/liens | 
*CloudResourceManagerApi.LiensApi* | [**cloudresourcemanagerLiensList**](docs/LiensApi.md#cloudresourcemanagerLiensList) | **GET** /v3/liens | 
*CloudResourceManagerApi.OrganizationsApi* | [**cloudresourcemanagerOrganizationsSearch**](docs/OrganizationsApi.md#cloudresourcemanagerOrganizationsSearch) | **GET** /v3/organizations:search | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsCreate**](docs/ProjectsApi.md#cloudresourcemanagerProjectsCreate) | **POST** /v3/projects | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsList**](docs/ProjectsApi.md#cloudresourcemanagerProjectsList) | **GET** /v3/projects | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsMove**](docs/ProjectsApi.md#cloudresourcemanagerProjectsMove) | **POST** /v3/{name}:move | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsSearch**](docs/ProjectsApi.md#cloudresourcemanagerProjectsSearch) | **GET** /v3/projects:search | 
*CloudResourceManagerApi.ProjectsApi* | [**cloudresourcemanagerProjectsUndelete**](docs/ProjectsApi.md#cloudresourcemanagerProjectsUndelete) | **POST** /v3/{name}:undelete | 
*CloudResourceManagerApi.TagBindingsApi* | [**cloudresourcemanagerTagBindingsCreate**](docs/TagBindingsApi.md#cloudresourcemanagerTagBindingsCreate) | **POST** /v3/tagBindings | 
*CloudResourceManagerApi.TagBindingsApi* | [**cloudresourcemanagerTagBindingsList**](docs/TagBindingsApi.md#cloudresourcemanagerTagBindingsList) | **GET** /v3/tagBindings | 
*CloudResourceManagerApi.TagKeysApi* | [**cloudresourcemanagerTagKeysCreate**](docs/TagKeysApi.md#cloudresourcemanagerTagKeysCreate) | **POST** /v3/tagKeys | 
*CloudResourceManagerApi.TagKeysApi* | [**cloudresourcemanagerTagKeysGetNamespaced**](docs/TagKeysApi.md#cloudresourcemanagerTagKeysGetNamespaced) | **GET** /v3/tagKeys/namespaced | 
*CloudResourceManagerApi.TagKeysApi* | [**cloudresourcemanagerTagKeysList**](docs/TagKeysApi.md#cloudresourcemanagerTagKeysList) | **GET** /v3/tagKeys | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesCreate**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesCreate) | **POST** /v3/tagValues | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesGet**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesGet) | **GET** /v3/{name} | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesGetIamPolicy**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesGetIamPolicy) | **POST** /v3/{resource}:getIamPolicy | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesGetNamespaced**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesGetNamespaced) | **GET** /v3/tagValues/namespaced | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesList**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesList) | **GET** /v3/tagValues | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesPatch**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesPatch) | **PATCH** /v3/{name} | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesSetIamPolicy**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesSetIamPolicy) | **POST** /v3/{resource}:setIamPolicy | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesTagHoldsCreate**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTagHoldsCreate) | **POST** /v3/{parent}/tagHolds | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesTagHoldsDelete**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTagHoldsDelete) | **DELETE** /v3/{name} | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesTagHoldsList**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTagHoldsList) | **GET** /v3/{parent}/tagHolds | 
*CloudResourceManagerApi.TagValuesApi* | [**cloudresourcemanagerTagValuesTestIamPermissions**](docs/TagValuesApi.md#cloudresourcemanagerTagValuesTestIamPermissions) | **POST** /v3/{resource}:testIamPermissions | 


## Documentation for Models

 - [CloudResourceManagerApi.AuditConfig](docs/AuditConfig.md)
 - [CloudResourceManagerApi.AuditLogConfig](docs/AuditLogConfig.md)
 - [CloudResourceManagerApi.Binding](docs/Binding.md)
 - [CloudResourceManagerApi.CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2alpha1FolderOperation.md)
 - [CloudResourceManagerApi.CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation](docs/CloudresourcemanagerGoogleCloudResourcemanagerV2beta1FolderOperation.md)
 - [CloudResourceManagerApi.CreateFolderMetadata](docs/CreateFolderMetadata.md)
 - [CloudResourceManagerApi.CreateProjectMetadata](docs/CreateProjectMetadata.md)
 - [CloudResourceManagerApi.EffectiveTag](docs/EffectiveTag.md)
 - [CloudResourceManagerApi.Expr](docs/Expr.md)
 - [CloudResourceManagerApi.Folder](docs/Folder.md)
 - [CloudResourceManagerApi.FolderOperation](docs/FolderOperation.md)
 - [CloudResourceManagerApi.FolderOperationError](docs/FolderOperationError.md)
 - [CloudResourceManagerApi.GetIamPolicyRequest](docs/GetIamPolicyRequest.md)
 - [CloudResourceManagerApi.GetPolicyOptions](docs/GetPolicyOptions.md)
 - [CloudResourceManagerApi.Lien](docs/Lien.md)
 - [CloudResourceManagerApi.ListEffectiveTagsResponse](docs/ListEffectiveTagsResponse.md)
 - [CloudResourceManagerApi.ListFoldersResponse](docs/ListFoldersResponse.md)
 - [CloudResourceManagerApi.ListLiensResponse](docs/ListLiensResponse.md)
 - [CloudResourceManagerApi.ListProjectsResponse](docs/ListProjectsResponse.md)
 - [CloudResourceManagerApi.ListTagBindingsResponse](docs/ListTagBindingsResponse.md)
 - [CloudResourceManagerApi.ListTagHoldsResponse](docs/ListTagHoldsResponse.md)
 - [CloudResourceManagerApi.ListTagKeysResponse](docs/ListTagKeysResponse.md)
 - [CloudResourceManagerApi.ListTagValuesResponse](docs/ListTagValuesResponse.md)
 - [CloudResourceManagerApi.MoveFolderMetadata](docs/MoveFolderMetadata.md)
 - [CloudResourceManagerApi.MoveFolderRequest](docs/MoveFolderRequest.md)
 - [CloudResourceManagerApi.MoveProjectRequest](docs/MoveProjectRequest.md)
 - [CloudResourceManagerApi.Operation](docs/Operation.md)
 - [CloudResourceManagerApi.Organization](docs/Organization.md)
 - [CloudResourceManagerApi.Policy](docs/Policy.md)
 - [CloudResourceManagerApi.Project](docs/Project.md)
 - [CloudResourceManagerApi.ProjectCreationStatus](docs/ProjectCreationStatus.md)
 - [CloudResourceManagerApi.SearchFoldersResponse](docs/SearchFoldersResponse.md)
 - [CloudResourceManagerApi.SearchOrganizationsResponse](docs/SearchOrganizationsResponse.md)
 - [CloudResourceManagerApi.SearchProjectsResponse](docs/SearchProjectsResponse.md)
 - [CloudResourceManagerApi.SetIamPolicyRequest](docs/SetIamPolicyRequest.md)
 - [CloudResourceManagerApi.Status](docs/Status.md)
 - [CloudResourceManagerApi.TagBinding](docs/TagBinding.md)
 - [CloudResourceManagerApi.TagHold](docs/TagHold.md)
 - [CloudResourceManagerApi.TagKey](docs/TagKey.md)
 - [CloudResourceManagerApi.TagValue](docs/TagValue.md)
 - [CloudResourceManagerApi.TestIamPermissionsRequest](docs/TestIamPermissionsRequest.md)
 - [CloudResourceManagerApi.TestIamPermissionsResponse](docs/TestIamPermissionsResponse.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/cloud-platform: See, edit, configure, and delete your Google Cloud data and see the email address for your Google Account.
  - https://www.googleapis.com/auth/cloud-platform.read-only: View your data across Google Cloud services and see the email address of your Google Account

